# genticode

./: .gitignore  ADDH.md  ADDH_v0_9.md  AGENTS.md  Makefile  OLDMAP_WATER_SPIDER.md  PRD.md  PRIORITY.yaml  README.md  README_FIRST.md  ROADMAP.md  ROADMAP_0.9x.md  ROADMAP_BATCHING_ORDERING.md  ROADMAP_CODE_SAFETY_HARDENING.md  ROADMAP_SSOT_TRACE_GOLDENS.md  SPRINT_PLAN.md  SPRINT_PLAN_0.9x.md  SPRINT_PLAN_WATER_SPIDER.md  pyproject.toml  requirements-dev.txt
.genticode/: policy.yaml  prompts.manifest.json  prompts.yaml  report.html  report.json  sarif.json
docs/: changelog.md
genticode/: __init__.py  baseline.py  cli.py  docsutil.py  gate.py  html.py  log.py  orchestrator.py  policy.py  report.py  sarif.py
genticode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: attempt.py  guard.sh  lessons_decide.py  monitor_pr.sh  run  smoke.sh
ssot/: decisions.yaml  requirements.yaml
tests/: conftest.py  test_attempt_loop.py  test_cli.py  test_cli_delta_supply.py  test_cli_iast.py  test_cli_prompt_scan.py  test_cli_req_dec.py  test_docs_gov.py  test_docs_ledger.py  test_docsutil_extra.py  test_docsutil_hash_tree.py  test_docsutil_parse_errors.py  test_docsutil_policy_and_schema_changes.py  test_docsutil_unit.py  test_flake.py  test_gate.py  test_gate_supply.py  test_gov_propose_cli.py  test_hardening.py  test_iast.py  test_intent_importer_cli.py  test_intent_importer_extra.py  test_intent_importer_golden.py  test_intent_importer_more.py  test_intent_importer_unit.py  test_orchestrator.py  test_orchestrator_more_paths.py  test_policy.py  (+27 more)
(+39 files in other folders)
